# Daqster

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.en.md  CHANGELOG.md  CMakeLists.txt  DellMeInfo.md  README.en.md  README.md
src/apps/Daqster/: AppToolbar.cpp  AppToolbar.h  ApplicationsManager.cpp  ApplicationsManager.h  CMakeLists.txt  Daqster.pro  QConsoleListener.cpp  WindowsShutdownHandler.h  main.cpp  mainwindow.cpp  mainwindow.h  testplugincreation.cpp  testplugincreation.h
src/external_libs/qtrest_lib/: CMakeLists.txt  qtrest_lib.cpp  qtrest_lib.h  qtrest_lib.pro
src/external_libs/qtrest_lib/api/Exchange/: ExchangeApi.cpp  ExchangeApi.h
src/frame_work/: CMakeLists.txt  frame_work.pro  resources.qrc
src/frame_work/UML/: plugins.xmi
src/frame_work/base/: PluginDescription.cpp  PluginDescription.h  PluginDetails.cpp  PluginDetails.h  PluginFilter.cpp  PluginFilter.h  QBasePluginObject.cpp  QBasePluginObject.h  QPluginBaseInterface.cpp  QPluginBaseInterface.h  QPluginListView.cpp  QPluginListView.h  QPluginManager.cpp  QPluginManager.h  QPluginManagerGui.cpp  QPluginManagerGui.h  QPluginObjectsInterface.cpp  QPluginObjectsInterface.h  debug.h  plugindetails.cpp  plugindetails.ui  pluginlistview.ui  pluginmanagergui.ui
src/frame_work/base/src/: PluginDescription.cpp  PluginDetails.cpp  PluginFilter.cpp  QBasePluginObject.cpp  QDaqsterPluginInterface.cpp  QPluginInterface.cpp  QPluginListView.cpp  QPluginListView.h  QPluginLoaderExt.cpp  QPluginLoaderExt.h  QPluginManager.cpp  QPluginManagerGui.h  Singleton.h  plugindetails.ui
src/frame_work/base/src/include/: PluginDescription.h  PluginFilter.h  QBasePluginObject.h  QDaqsterPluginInterface.h  QPluginInterface.h  QPluginManager.h  build_cfg.h  debug.h
src/frame_work/base/src/platform/: ShutdownHandler.h  UnixShutdownHandler.cpp  UnixShutdownHandler.h  WindowsShutdownHandler.cpp
src/frame_work/base/src/process/: QProcessManager.cpp  QProcessManager.h
src/plugins/: CMakeLists.txt  plugins.pro
src/plugins/QtCoinTrader/: CMakeLists.txt  QtCoinTrader.pro  QtCoinTrader.qrc  QtCoinTraderInterface.cpp  QtCoinTraderInterface.h  QtCoinTraderPluginObject.cpp  QtCoinTraderPluginObject.h  QtCoinTraderWindow.cpp  QtCoinTraderWindow.h  RequestForm.cpp  RequestForm.h  RequestForm.ui  RestApiTester.cpp  RestApiTester.h  mainwindow.ui
src/plugins/QtCoinTrader/api/: ExchangeApi.cpp  ExchangeApi.h
src/plugins/QtCoinTrader/api/models/: ExchangeModel.h  (+1 more)
src/plugins/QtCoinTrader/assets/: assets.qrc
src/plugins/QtCoinTrader/qml/: About.qml  MdiArrea.qml  SideBar.qml  SideBarDelegate.qml  ViewModel.qml  ViewWin.qml
src/plugins/QtCoinTrader/utils/: RandData.cpp  RandData.h
src/plugins/RestApiTester/: MainAppTraderWindow.cpp  MainAppTraderWindow.h  RestApiTester.pro  RestApiTester.qrc  RestApiTesterInterface.cpp  RestApiTesterInterface.h  RestApiTesterPluginObject.cpp  RestApiTesterPluginObject.h  mainwindow.ui  restapitester.ui
src/plugins/RestApiTester/RestApi/: RestApi.cpp  RestApi.h  RestApi.pro  restapi_global.h
src/plugins/node_editor/: AudioNodeQdevIoConnector.cpp  AudioNodeQdevIoConnector.h  AudioSourceConfig.cpp  AudioSourceConfig.h  AudioSourceDataModel.cpp  AudioSourceDataModel.h  AudioSourceDataModelUI.cpp  AudioSourceDataModelUI.h  AudioSourceDataModelUI.ui  AudioSourceWidget.cpp  AudioSourceWidget.h  AudioSourceWidget.ui  AudioWorker.cpp  AudioWorker.h  CMakeLists.txt  ComplexType.h  Converters.cpp  Converters.h  IntegerData.h  ModuloModel.cpp  ModuloModel.h  NodeDataModelToQIODeviceConnector.cpp  NodeDataModelToQIODeviceConnector.h  NodeEditorInterface.cpp  NodeEditorInterface.h  NodeEditorPluginObject.cpp  NodeEditorPluginObject.h  NumbeSourceDataUi.cpp  NumbeSourceDataUi.h  NumbeSourceDataUi.ui  NumberDisplayDataModel.cpp  NumberSourceDataModel.cpp  NumberSourceDataModel.h  NumberSourceDataUi.h  QAudioInputThread.cpp  QAudioInputThread.h  QDevIoDisplayModel.cpp  QDevIoDisplayModel.h  QDevioDisplayModelUi.cpp  QDevioDisplayModelUi.h  (+7 more)
src/plugins/node_editor/Audio/: AudioNodeQdevIoConnector.cpp  AudioNodeQdevIoConnector.h  AudioSourceConfig.cpp  AudioSourceConfig.h  AudioSourceConfig.ui  AudioSourceDataModel.cpp  AudioSourceDataModel.h  AudioSourceDataModelUI.cpp  AudioSourceDataModelUI.h  AudioSourceDataModelUI.ui  AudioWorker.cpp  AudioWorker.h  node_editor.qrc
src/plugins/node_editor/Examples/: Converters.cpp  Converters.h  ModuloModel.cpp  ModuloModel.h  NumberDisplayDataModel.cpp  NumberDisplayDataModel.h  NumberSourceDataModel.cpp  NumberSourceDataModel.h  NumberSourceDataUi.cpp  NumberSourceDataUi.h  NumberSourceDataUi.ui  NumericType.h
src/plugins/node_editor/ThreadPull/: EventThreadPull.cpp  EventThreadPull.h
src/plugins/template_plugin_daqster/: DaqsterTeplateInterface.cpp  DaqsterTeplateInterface.h  TemplatePluginObject.cpp  TemplatePluginObject.h  template_plugin_daqster.pro  template_recources.qrc
src/plugins/tests/: CMakeLists.txt
src/plugins/tests/plugin_fancy_test/: CMakeLists.txt  DaqsterTeplateInterface.cpp  DaqsterTeplateInterface.h  PluginFancyInterface.cpp  PluginFancyInterface.h  PluginFancyObject.cpp  PluginFancyObject.h  TemplatePluginObject.cpp  fancy_test.qrc  plugin_fancy_test.pro
src/plugins/tests/plugin_main_test/: CMakeLists.txt  DaqsterTeplateInterface.cpp  DaqsterTeplateInterface.h  PluginMainInterface.cpp  PluginMainInterface.h  PluginMainObject.cpp  PluginMainObject.h  TemplatePluginObject.cpp  plugin_main_test.pro
src/plugins/tests/plugin_uggly_test/: CMakeLists.txt  DaqsterTeplateInterface.cpp  DaqsterTeplateInterface.h  PluginUgglyInterface.cpp  PluginUgglyInterface.h  PluginUgglyObject.cpp  PluginUgglyObject.h  TemplatePluginObject.cpp  TemplatePluginObject.h  plugin_uggly_test.pro  uggly_test.qrc
src/plugins/tests/template_plugin_daqster/: CMakeLists.txt  DaqsterTeplateInterface.cpp  DaqsterTeplateInterface.h  TemplatePluginObject.cpp  TemplatePluginObject.h  template_plugin_daqster.pro
src/plugins/unit_test_plugin/: UnitTestInterface.cpp  UnitTestInterface.h  UnitTestPluginObject.cpp  UnitTestPluginObject.h  unit_test.qrc  unit_test_plugin.pro
(+44 files in other folders)
