set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${PROJECT_BINARY_DIR}/bin/plugins)

# Plugins - conditional based on Qt version, available modules and external libraries
message(STATUS "=== Plugins Status ===")

if(QT_VERSION_MAJOR EQUAL 5)
    # Check if required Qt5 modules and external libraries are available
    if(QT_MULTIMEDIA_LIB AND NOT "${QT_MULTIMEDIA_LIB}" STREQUAL "" AND TARGET nodes)
        add_subdirectory(node_editor)
        message(STATUS "NodeEditor plugin enabled for Qt5 (Multimedia + NodeEditor library available)")
    else()
        if(NOT QT_MULTIMEDIA_LIB OR "${QT_MULTIMEDIA_LIB}" STREQUAL "")
            message(STATUS "NodeEditor plugin disabled for Qt5 (Multimedia not available)")
        else()
            message(STATUS "NodeEditor plugin disabled for Qt5 (NodeEditor library not available)")
        endif()
    endif()
    
    if(QT_QUICKCONTROLS2_LIB AND NOT "${QT_QUICKCONTROLS2_LIB}" STREQUAL "" AND TARGET qtrest_lib)
        add_subdirectory(QtCoinTrader)
        message(STATUS "QtCoinTrader plugin enabled for Qt5 (QuickControls2 + QtRest library available)")
    else()
        if(NOT QT_QUICKCONTROLS2_LIB OR "${QT_QUICKCONTROLS2_LIB}" STREQUAL "")
            message(STATUS "QtCoinTrader plugin disabled for Qt5 (QuickControls2 not available)")
        else()
            message(STATUS "QtCoinTrader plugin disabled for Qt5 (QtRest library not available)")
        endif()
    endif()
    
    add_subdirectory(tests)
    message(STATUS "Test plugins enabled for Qt5 (plugin_fancy_test, plugin_main_test, plugin_uggly_test, plugin_template_test)")
else()
    # For Qt6, only enable basic test plugins (no external dependencies)
    add_subdirectory(tests)
    message(STATUS "Only basic test plugins enabled for Qt6 (plugin_fancy_test, plugin_main_test, plugin_uggly_test, plugin_template_test) - NodeEditor and QtCoinTrader disabled due to external dependencies")                                                                                        
endif()
